--- a/Practice 2/index.html
+++ b/Practice 2/index.html
@@ -1,21 +1,35 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿﻿
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice 2 - Landing Page</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <title>amocana 1</title>
+    <link rel="icon" type="image/x-icon" href="images/pfp.png" />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/task1.css" />
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Task 1</a></li>
-            <li><a href="Src/task2.html">Task 2</a></li>
-        </ul>
-    </nav>
+    <div id="head">
+        <h1>Get 10% Off On Your Next Travel</h1>
+        <br />
+        <h2>
+            maximum discount 1000$ per person</h3>
+            <br />
+            <form>
+                <input type="text" name="email" placeholder="Enter your email">
+                <input id="sub" type="submit" value="subscribe">
+            </form>
+            <center>
+    </div>
+    <div id="d">
+        <h4>OUR SMILES</h4>
+        <h1>Happy Travelers</h1>
+        <img src="images/shape 1.png" />
+    </div></center>
 
-    <h1>Welcome to Task 1</h1>
-    <p>This is the landing page for Task 1.</p>
-    <button onclick="window.location.href='Src/task2.html'">Go to Task 2</button>
+    <div id="a">
+        <div class="person"><img src="images/clip.png" /> <h3>Ribeca Singh</h3> <p>lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard</p> <img src="images/Forma 1.svg" height="30px" width="30px"></div>
+        <div class="person"><img src="images/Ellipse 2.png" /> <h3>Jimmy Dean</h3> <p>lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard</p> <img src="images/Forma 1.svg" height="30px" width="30px"></div>
+        <div class="person"><img src="images/clip.png" /> <h3>Theodore Terer</h3> <p>lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard</p> <img src="images/Forma 1.svg" height="30px" width="30px"></div>
+    </div>
+
 </body>
 </html>
