--- a/Practice 2/index.html
+++ b/Practice 2/index.html
@@ -1,35 +1,46 @@
-﻿﻿
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>amocana 1</title>
-    <link rel="icon" type="image/x-icon" href="images/pfp.png" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/task1.css" />
+    <title>Practice 2</title>
+    <link rel="stylesheet" href="Styles/rest.css">
+    <link rel="stylesheet" href="Styles/Style.css">
 </head>
 <body>
-    <div id="head">
-        <h1>Get 10% Off On Your Next Travel</h1>
-        <br />
-        <h2>
-            maximum discount 1000$ per person</h3>
-            <br />
-            <form>
-                <input type="text" name="email" placeholder="Enter your email">
-                <input id="sub" type="submit" value="subscribe">
-            </form>
-            <center>
+    <ul id="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Src/login.html">Login</a></li>
+    </ul>
+    <div id="bgcontainer">
+        <div id="title">
+            <h1>Get 10% Off On Your Next Travel</h1>
+            <p>maximum discount 1000$ per person</p>
+        </div>
+        <div>
+            <input type="email" id="email" placeholder="Enter your email">
+            <button id="btn">Subscribe</button>
+        </div>
     </div>
-    <div id="d">
-        <h4>OUR SMILES</h4>
-        <h1>Happy Travelers</h1>
-        <img src="images/shape 1.png" />
-    </div></center>
-
-    <div id="a">
-        <div class="person"><img src="images/clip.png" /> <h3>Ribeca Singh</h3> <p>lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard</p> <img src="images/Forma 1.svg" height="30px" width="30px"></div>
-        <div class="person"><img src="images/Ellipse 2.png" /> <h3>Jimmy Dean</h3> <p>lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard</p> <img src="images/Forma 1.svg" height="30px" width="30px"></div>
-        <div class="person"><img src="images/clip.png" /> <h3>Theodore Terer</h3> <p>lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard</p> <img src="images/Forma 1.svg" height="30px" width="30px"></div>
+    <div id="minititle">
+        <p>OUR SMILES</p>
+        <h1>Happy Travellers</h1>
+        <img src="Images/Shape 1.png">
     </div>
-
+    <div id="profiles">
+        <div id="pfp1">
+            <img src="Images/Clip.png">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+            <img src="Images/Forma 1.svg">
+        </div>
+        <div id="pfp2">
+            <img src="Images/Ellipse 2.png">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+            <img src="Images/Forma 1.svg">
+        </div>
+        <div id="pfp3">
+            <img src="Images/Clip.png">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+            <img src="Images/Forma 1.svg">
+        </div>
+    </div>
 </body>
 </html>
